--- a/app/globals.css
+++ b/app/globals.css
@@ -14,19 +14,19 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 220 14% 30%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --secondary: 210 10% 92%;
+    --secondary-foreground: 220 14% 30%;
+    --muted: 210 10% 92%;
+    --muted-foreground: 220 5% 40%;
+    --accent: 210 10% 92%;
+    --accent-foreground: 220 14% 30%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --border: 220 13% 85%;
+    --input: 220 13% 85%;
+    --ring: 220 14% 30%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -76,7 +76,8 @@ body {
     @apply bg-[#a9a9a9];
   }
   .gradient-title {
-    @apply gradient font-extrabold tracking-tighter text-transparent bg-clip-text pb-2 pr-2;
+    @apply font-extrabold tracking-tighter pb-2 pr-2 text-black;
+    @apply dark:gradient dark:text-transparent dark:bg-clip-text;
   }
 }
 
@@ -103,10 +104,10 @@ body {
   height: 100%;
   background: linear-gradient(
       to right,
-      rgba(255, 255, 255, 0.1) 1px,
+      rgba(0, 0, 0, 0.05) 1px,
       transparent 1px
     ),
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
   background-size: 50px 50px;
   pointer-events: none;
   z-index: -1;
@@ -119,5 +120,18 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  background: radial-gradient(circle, transparent, rgba(0, 0, 0, 0.05));
+}
+
+.dark .grid-background {
+  background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.1) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+}
+
+.dark .grid-background::before {
   background: radial-gradient(circle, transparent, rgba(0, 0, 0, 0.9));
 }
